--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,15 @@
         <param-value></param-value>
     </context-param>
     <context-param>
-        <param-name>password</param-name>
+        <param-name>password1</param-name>
         <param-value></param-value>
+    </context-param>
+    <context-param>
+        <param-name>user</param-name>
+        <param-value>root</param-value>
+    </context-param>
+    <context-param>
+        <param-name>password</param-name>
+        <param-value>coderslab</param-value>
     </context-param>
 </web-app>
